--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
     <header>
-<a href="#"> WEBSTUDIO </a>
+
 <nav>
+    <a href="./index.html"> WebStudio </a>
    <ul>
     <li>Studio</li>
     <li>Portfolio</li>
