--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
     <ul>
 
         <li>
-            <img src="/images/computer.jpg" alt="computer" width="360">
+            <img src="./images/computer.jpg" alt="computer" width="360">
         </li>
 
         <li>
-            <img src="/images/iphone.jpg" alt="browserbookmarks" width="360">
+            <img src="./images/iphone.jpg" alt="browserbookmarks" width="360">
         </li>
 
         <li>
-            <img src="/images/phones.jpg" alt="phone" width="360">
+            <img src="./images/phones.jpg" alt="phone" width="360">
         </li>
 
     </ul>
@@ -94,25 +94,25 @@
 
 <ul>
     <li>
-        <img src="/images/facemanfirst.jpg" alt="firstman" width="264" height="260">
+        <img src="./images/facemanfirst.jpg" alt="firstman" width="264" height="260">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
     </li>
 
     <li>
-        <img src="/images/facemansecond.jpg" alt="secondman" width="264" height="260">
+        <img src="./images/facemansecond.jpg" alt="secondman" width="264" height="260">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
     </li>
 
     <li>
-        <img src="/images/facewomanthird.jpg" alt="thirdwoman" width="264" height="260">
+        <img src="./images/facewomanthird.jpg" alt="thirdwoman" width="264" height="260">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
     </li>
 
     <li>
-        <img src="/images/facemanfour.jpg" alt="fourman" width="264" height="260">
+        <img src="./images/facemanfour.jpg" alt="fourman" width="264" height="260">
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
     </li>
@@ -123,10 +123,9 @@
 
 
     </main>
-    
+                    
     <footer>
-<a href="./index.htm"> WebStudio</a>`
-
+    <a href="./index.html"> WebStudio</a>`
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
