--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </main>
                     
     <footer>
-    <a href="./index.html"> WebStudio</a>
+    <a href="./index.html"> WebStudio</a>f
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
